Automatically backed up by Learn

--- a/app/views/genres/show.html.erb
+++ b/app/views/genres/show.html.erb
@@ -1,8 +1,1 @@
-<h3>My edit</h3>
-
-<%= form_for(@genre) do |f| %>
-  <label>My genre name:</label><br>
-  <%= f.text_field :name %><br>
-
-  <%= f.submit %>
-<% end %>
+<h1><%= @genre.name %></h1>
